Fix horizontal scroll on windows

--- a/css/style.css
+++ b/css/style.css
@@ -42,7 +42,7 @@ a {
 
 body {
     min-height: 100vh;
-    width: 100vw;
+    width: 100%;
 }
 
 section {
